Fixed spacing

--- a/assets/styles/analysis.less
+++ b/assets/styles/analysis.less
@@ -1,28 +1,28 @@
-.md-padding{
+#analysis{
   max-width: 80%;
 
-  #analysis {
+  md-card {
 
     md-content {
       overflow-x: auto;
     }
 
-  	.chart-holder {
-  		padding-left: 8px;
-  		padding-right: 8px;
-  		height: 150px;
-  		width: 250px;
-  	}
+    .chart-holder {
+      padding-left: 8px;
+      padding-right: 8px;
+      height: 150px;
+      width: 250px;
+    }
 
-  	.feature-column {
-  		width: 266px;
+    .feature-column {
+      width: 266px;
       overflow: initial;
-  	}
+    }
 
-  	.horizontal-padding {
-  		padding-left: 8px;
-  		padding-right: 8px;
-  	}
+    .horizontal-padding {
+      padding-left: 8px;
+      padding-right: 8px;
+    }
 
     selection-slider {
       > * {
